# CourseWork_Allegro

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake-multi-platform.yml
allegro/lib/cmake/allegro/: AllegroConfig.cmake  AllegroTargets-release.cmake  AllegroTargets.cmake
